<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="bracket">)</string>
    <string name="division">/</string>
    <string name="leftbracket">(</string>
    <string name="x_square">x^2</string>
    <string name="sqrt">√</string>
    <string name="inv">1/x</string>
    <string name="multiple">X</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pi">π</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="neg">+/-</string>
    <string name="ce">CE</string>
    <string name="bs">BS</string>
</resources>