<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/retro_beige"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/second_tv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/retro_grey2"
        android:gravity="bottom"
        android:maxLines="1"
        android:padding="10dp"
        android:paddingTop="30dp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/primary_tv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/retro_grey2"
        android:layout_below="@id/second_tv"
        android:gravity="bottom"
        android:maxLines="1"
        android:padding="10dp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="35sp"
        tools:ignore="RtlCompat"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/primary_tv"
        android:background="@color/retro_beige"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_CE"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/ce"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_C"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/c"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_BS"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/bs"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_div"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/division"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:padding="6dp"
                    android:text="@string/_7"
                    android:background="@drawable/white_button"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_multiple"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/multiple"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_pi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/neg"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/white_button"
                    android:padding="6dp"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/gray_button"
                    android:padding="6dp"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>